修改解决方案网站文件夹名
修改解决方案网站文件夹名

--- a/BatchUploadExcelWeb/Web.config
+++ b/BatchUploadExcelWeb/Web.config
@@ -17,6 +17,9 @@
     <!--批量上传Excel数据库连接字符串名称-->
     <add key="BatchUploadExcelToDBConn" value="FinancialSettlementDb"/>
     <add key="SaveErrorFileRoot" value="F:\"/>
+  
+    <add key="owin:appStartup" value="false" />
+    <add key="owin:AutomaticAppStartup" value="false" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
