--- a/SimpleUploadExcelWeb/SimpleUploadExcelWeb.csproj
+++ b/SimpleUploadExcelWeb/SimpleUploadExcelWeb.csproj
@@ -208,13 +208,13 @@
     <Content Include="Views\File\Upload.cshtml" />
     <Content Include="Views\File\UploadResult.cshtml" />
     <Content Include="Views\NewUploadRequirement\Upload.cshtml" />
+    <Content Include="UploadFileTemplate\TestDatasourceModelRequire-Template.xlsx" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="ImportErrorFiles\" />
     <Folder Include="Models\" />
     <Folder Include="UploadFiles\" />
-    <Folder Include="UploadFileTemplate\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
