拆分Attribute,令职责单一
拆分Attribute,令职责单一，同时用户可以继承实现校验Attribute，可以继承实现DatasourceAttribute

--- a/SimpleImportEntity/SimpleImportEntity.csproj
+++ b/SimpleImportEntity/SimpleImportEntity.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Demo\DataSource\CityDatasource.cs" />
+    <Compile Include="Demo\DataSource\GetDataSourceInstance.cs" />
     <Compile Include="Demo\TestDataSourceModel.cs" />
     <Compile Include="Demo\TestRegularValidModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
