--- a/SimpleUploadExcelWeb/Web.config
+++ b/SimpleUploadExcelWeb/Web.config
@@ -5,9 +5,13 @@
   -->
 <configuration>
   <configSections>
+    <section name="unity" type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, Microsoft.Practices.Unity.Configuration" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  
+  <unity configSource="Config\Unity.config" />
+  
   <connectionStrings>
     <add name="FinancialSettlementDb" connectionString="Data Source=db.chukou1.cn;Database=ck1_FinancialSettlement_Dev2;User Id=store;Password=BFE.dev.2011; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApplication1-20170604020057.mdf;Initial Catalog=aspnet-WebApplication1-20170604020057;Integrated Security=True" providerName="System.Data.SqlClient" />
