--- a/SimpleUploadExcelWeb/Web.config
+++ b/SimpleUploadExcelWeb/Web.config
@@ -27,6 +27,11 @@
     <add key="SimpleImportExcel:EntityAssemblyName" value="SimpleImportEntity" />
     <!--SimpleImportExcel:EntityNameSpace:实体命名空间-->
     <add key="SimpleImportExcel:EntityNameSpace" value="SimpleImportEntity" />
+    
+    <!--SimpleImportExcel:实体Handler对应DLL名称-->
+    <add key="SimpleImportExcel:EntityHandlerAssemblyName" value="SimpleImportEntity" />
+    <!--SimpleImportExcel:EntityNameSpace:实体Handler命名空间-->
+    <add key="SimpleImportExcel:EntityHandlerNameSpace" value="SimpleImportEntity.Handler" />
 
 
     <add key="owin:appStartup" value="false" />
