--- a/SimpleUploadExcelHelper/SimpleUploadExcelHelper.csproj
+++ b/SimpleUploadExcelHelper/SimpleUploadExcelHelper.csproj
@@ -80,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attribute\DataSourceAttribute\DataSourceFieldAttribute.cs" />
+    <Compile Include="Attribute\DiscriptionAttribute\EntitiesHandlerAttribute.cs" />
     <Compile Include="Attribute\DiscriptionAttribute\DBTableAttribute.cs" />
     <Compile Include="Attribute\DiscriptionAttribute\DBTableColumnAttribute.cs" />
     <Compile Include="Attribute\DiscriptionAttribute\ExcelColumnAttribute.cs" />
@@ -97,14 +98,12 @@
     <Compile Include="Entities\EntityBase.cs" />
     <Compile Include="ErrorEntityToFileHelper.cs" />
     <Compile Include="EntityToDBHelper.cs" />
-    <Compile Include="Event\IEventHandler.cs" />
-    <Compile Include="Event\EventResult.cs" />
+    <Compile Include="Handler\IEntitiesHandler.cs" />
     <Compile Include="ExcelToEntityHelper.cs" />
     <Compile Include="Common\ExcelFileInfo.cs" />
     <Compile Include="Common\NPOIExcelHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaveExcelHelper.cs" />
-    <Compile Include="Event\EventBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
