--- a/SimpleUploadExcelWeb/SimpleUploadExcelWeb.csproj
+++ b/SimpleUploadExcelWeb/SimpleUploadExcelWeb.csproj
@@ -201,6 +201,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\loading.gif" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -209,6 +210,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Config\Unity.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\File\SimpleUplaodExcel.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -235,12 +237,13 @@
     <Content Include="Views\File\Upload.cshtml" />
     <Content Include="Views\File\UploadResult.cshtml" />
     <Content Include="Views\NewUploadRequirement\Upload.cshtml" />
-    <Content Include="UploadFileTemplate\TestDatasourceModelRequire-Template.xlsx" />
+    <Content Include="UploadFileTemplate\Demo-Template.xlsx" />
+    <Content Include="Views\File\ProcessBar.cshtml" />
+    <Content Include="Views\File\UploadWidthProcessBar.cshtml" />
+    <Content Include="Views\NewUploadRequirement\UploadWidthProcessBar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="ImportErrorFiles\" />
-    <Folder Include="Models\" />
     <Folder Include="UploadFiles\" />
   </ItemGroup>
   <ItemGroup>
